# PyrusSheet_Automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: mapping.example.yaml  mapping.yaml
pyrus_sheet_sync/: __init__.py  __main__.py  columns.py  config.py  mapping.py  pyrus.py  runner.py  sheets.py
tests/: test_columns.py  test_mapping.py  test_pyrus.py
